<resources>
    <string name="app_name">MyToDoTask</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">group14@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_sort">Sort</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_task">My Tasks</string>
    <string name="menu_add_new_tag">Create new tag</string>
    <string name="menu_add_new_filter">Create new filter</string>
    <string name="menu_categorize">Uncategorized</string>
    <string name="nav_header_title">My To-Do Tasks Application</string>
    <string name="action_clear_completed">Clear Completed</string>
    <string name="action_search">Search</string>
    <string name="app_version">1.0.1</string>
    <string name="made_by">K15-Android-Group14</string>
    <string name="contact_me">You can contact with me by email</string>
    <string name="tag_truong">Nguyễn Nhật Trường</string>
    <string name="tag_email_truong">nnt.nguyennhattruong@gmail.com</string>
    <string name="tag_nguyen">Lê Hà Nguyên</string>
    <string name="tag_email_nguyen">lehanguyen97@gmail.com</string>
    <string name="tag_quynh">Lê Nguyễn Tố Quỳnh</string>
    <string name="tag_email_quynh">quynhle13301@gmail.com</string>
    <string name="menu_about">About</string>
    <string name="action_filter">Filters</string>
    <string name="action_other">Others</string>
    <string name="action_tag">Tags</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="menu_list_tag">List of tags</string>
    <string name="label_title">Title</string>
    <string name="label_tag">Tag</string>
    <string name="chbox_completed">Completed</string>
    <string name="notification_channel_description">Notification</string>
</resources>
