<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".otheractivity.SearchActivity">

    <TextView
            android:text="@string/label_title" android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textStyle="bold|italic"
            android:id="@+id/textView" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/label_tag" android:textSize="18sp" android:textStyle="bold|italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" android:textSize="18sp"
            android:ems="10" android:hint="Enter the title"
            android:id="@+id/edt_Title" android:background="@android:color/transparent"
            app:layout_constraintStart_toEndOf="@+id/textView" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView" app:layout_constraintTop_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/action_search" android:background="@drawable/btn_rounded_orange_300"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_search" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:hint="Select the tags"
            android:id="@+id/tv_select_tags" android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/textView"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/textView4" app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <RadioGroup
            android:layout_width="0dp"
            android:layout_height="50dp" android:gravity="center_vertical" android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_select_tags" android:id="@+id/radioGroup">
        <RadioButton
                android:text="@string/chbox_completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radio_btn_completed" android:layout_weight="1"/>
        <RadioButton
                android:text="Uncomplete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radio_btn_uncomplete" android:layout_weight="1"/>
        <RadioButton
                android:text="None"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radio_btn_none" android:layout_weight="1"/>
    </RadioGroup>
    <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_search" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:id="@+id/rcv_items_search"/>

</android.support.constraint.ConstraintLayout>